--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,15 @@
 <html lang="en">
     <head>
         <title>Hello!!!</title>
+        <style>
+            h1 {
+                color:blue;
+            }
+        </style>
     </head>
     <body>
-        <h1>Welcome to my Website!!!</h1>
+        <h1 >Welcome to my Website!!!!</h1>
+        <h2>Focused Development, LLC</h2>
         Hello, World!!!
     </body>
 </html>
